[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geography-explorer"
version = "0.1.0"
description = "CLI geography exploration application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests"
]

[project.scripts]
geography-explorer = "geography_explorer.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]